--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@
         <br>
         <h1>Github Repo For This Site:</h1>
             <p>
-            <a href="https://github.com/chanchanmao/chanchanmao.github.io/" target="_blank" style="color: #2a90bf;">https://github.com/chanchanmao/chanchanmao.github.io</a>
+            <a href="https://github.com/chanchanmao/chanchanmao" target="_blank" style="color: #2a90bf;">https://github.com/chanchanmao/chanchanmao.github.io</a>
             </p>
         <!-- <h1>smth</h1>
             <p>
