--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <p class = "line">Hi! My name is ChanChan Mao.</p>
         </div>
         <h1>Welcome to my personal portfolio!</h1>
-        <h2>Click on the links above to learn more about me!</h2>
+        <h2>Click on the tabs above to learn more about me!</h2>
             <!-- <p>im confused.</p>
         <h3>pls send help</h3> -->
         <br><br>
