changed color scheme

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
         <div class = "home">
             <p class = "line">Hi! My name is ChanChan Mao.</p>
         </div>
-        <h1>Welcome to my personal portfolio!</h1>
-        <h2>Click on the tabs above to learn more about me!</h2>
+        <img src="me.jpg" width="325px" style="padding-top: 40px">
+        <h1>Welcome to my personal portfolio</h1>
             <!-- <p>im confused.</p>
         <h3>pls send help</h3> -->
         <br><br>
