--- a/ucsb.html
+++ b/ucsb.html
@@ -56,7 +56,7 @@
         <p class="hov">
             I am currently a member of <a href="http://thetatau.org/" target="_blank">Theta Tau</a>, the largest and oldest co-ed professional engineering fraternity. The <a href="https://sbthetatau.herokuapp.com/" target=_blank">UCSB chapter of Theta Tau</a> is the 100th chapter and was installed on June 1, 2019 as the Sigma Epsilon Chapter!
             <br><br>
-            I became a member of the fraternity in June 2019, as part of Epsilon Class. Theta Tau has allowed me to meet so many wonderful people that I can call my brothers and that I can bond with and look up to for advice. Theta Tau has also given me the opportunity to grow as an individual and as a student, and has pushed me to work harder on myself and on my academics.
+            I became a member of the fraternity in June 2019, as part of Epsilon Class. Theta Tau has allowed me to meet so many wonderful people that I can call my brothers and that I can bond with and look up to for academic and career advice. Theta Tau has also given me the opportunity to grow as an individual and as a student, and has pushed me to work harder on myself and on my academics.
             <br><br>
             I am head of the Brotherhood and Professional Development Committee. I work with a committee of 8 other members to create engaging as well as professional bi-weekly events for members of the fraternity. Along with the committee, we coordinated with a body of over 50 members to create events and strong networks connected by brotherhood and professional development.
             <br><br>
@@ -64,7 +64,7 @@
             <br>
             <a href="https://www.instagram.com/ucsbthetatau/" target="_blank"><img src="ig.png" width="40px"></a>
             <br><br>
-            I am a staff member of the Korean American Student Association on the Events Committee. Along with two committee members and 20 other student staff members, we plan social events, sober events, club family events, bonding events, etc. We also collaborate with other Asian organizations on campus, such as the Vietnamese Student Association (VSA) and the Taiwanese American Student Association (TASA), to plan events and bring more interest and awareness to Asian ethnicities. I have been a member of KASA since September 2018 and a staff member since January 2019.
+            I am a staff member of the Korean American Student Association on the Events Committee. Along with two committee members and 20 other student staff members, we plan social events, club family events, bonding events, etc. We also collaborate with other Asian organizations on campus, such as the Vietnamese Student Association (VSA) and the Taiwanese American Student Association (TASA), to plan events that bring more interest and awareness to Asian ethnicities. I have been a member of KASA since September 2018 and a staff member since January 2019.
             <br><br>
             (Fun Fact: I designed this logo.)
             <br>
@@ -73,7 +73,7 @@
             <a href="https://www.facebook.com/ucsantabarbarakasa/" target="_blank"><img src="fb.png" width="40px" hspace="10px"></a>
             <a href="https://www.instagram.com/ucsbkasa/" target="_blank"><img src="ig.png" width="40px"></a>
         <br><br>
-            I am a staff member of Cooking Club at UCSB as the social media chair. I worked alongside a team of 10 students to establish the new club in September 2019 with the goal of engaging students interested in cooking and providing a source of advice and tips for college students struggling with cooking. As social media chair, I design flyers, promote future events on numerous social media platforms, and talk online with students interested in events and joining the club.
+            I am a founder and staff member of Cooking Club at UCSB as the social media chair. I worked alongside a team of 10 students to establish the new club in September 2019 with the goal of engaging students interested in cooking and providing a source of advice and tips for college students struggling with cooking. As social media chair, I design flyers, promote future events on numerous social media platforms, and talk online with students interested in events and joining the club.
             <br><br>
             <img src="cookingclub.jpg" alt="Cooking Club at UCSB" width="300px">
             <br>
@@ -90,7 +90,7 @@
         <br>
         <h2>WHY I CHOSE UCSB</h2>
         <p>
-            I never had the opportunity to visit colleges before I made my decision on where to go. My parents were always working, we needed a dogsitter, and I was busy with either school, work, or other extracurricular activities. 
+            I never had the opportunity to visit colleges before I made my decision on which college to attend. My parents were always busy working, we needed a dogsitter, and I was busy with either school, work, or other extracurricular activities. 
             <br><br>
             My decision was between UC Santa Barbara and UC San Diego. UCSB had the reputation of being a "party school" and UCSD was known as "UC Socially Dead." I had older friends who went to both schools, so I asked them about their first year college experience. Friends at UCSB said that everyone is very helpful and supportive and that the school has a very nice atmosphere to it. Friends at UCSD said that the school is really quiet and people tend to stay inside.
             <br><br>
