--- a/aboutme.html
+++ b/aboutme.html
@@ -13,8 +13,9 @@
         <li><a href="resume.html">RESUME</a></li>
         <li><a href="ucsb.html">UCSB</a>
           <div>
-            <a href="ucsb.html#extra">Extracurriculars</a>
-            <a href="ucsb.html#ucsb">Why UCSB</a>
+            <a href="ucsb.html#extracurriculars">Extracurriculars</a>
+            <a href="ucsb.html#whycs">Why CS</a>
+            <a href="ucsb.html#whyucsb">Why UCSB</a>
           </div>
         </li>
         <li><a href="aboutme.html">ABOUT ME</a></li>
