--- a/index.html
+++ b/index.html
@@ -29,17 +29,25 @@
         <li style="float: left"><a href="index.html">HOME</a></li>
     </ul> -->
 
-    <div class = "main" style="text-align: center;">
+    <div class = "main"">
         <!-- <h1>hi idk what im doing yet</h1> -->
         <div class = "home">
             <p class = "line">Hi! My name is ChanChan Mao.</p>
         </div>
-        <h1>Welcome to my personal portfolio!</h1>
-        <h2>Click on the tabs above to learn more about me!</h2>
-            <!-- <p>im confused.</p>
-        <h3>pls send help</h3> -->
-        <br><br>
-        <h2>Work In Progress . . .</h2>
+        <div class = "center">
+            <img src="me.jpg" width="325px">
+            <p style = "text-align: left; padding-top: 100px;">
+                I am a second year student at University of California, Santa Barbara and I am pursuing a Bachelor of Science in Computer Science.
+            </p>
+        </div>
+        
+        <div class = "clear">
+            <h1>welcome to my personal portfolio</h1>
+                <!-- <p>im confused.</p>
+            <h3>pls send help</h3> -->
+            <br><br>
+            <h2>Work In Progress . . .</h2>
+        </div>
     </div>
 
 
