changed home page, added "whycs" to ucsb

--- a/ucsb.html
+++ b/ucsb.html
@@ -15,6 +15,7 @@
         <li><a href="ucsb.html">UCSB</a>
           <div>
             <a href="ucsb.html#extracurriculars">Extracurriculars</a>
+            <a href="ucsb.html#whycs">Why CS</a>
             <a href="ucsb.html#whyucsb">Why UCSB</a>
           </div>
         </li>
@@ -52,7 +53,7 @@
         <br>
         <a name="extracurriculars"></a>
         <br>
-        <h2>EXTRACURRICULARS</h2>
+        <h2>EXTRACURRICULAR ACTIVITIES</h2>
         <p class="hov">
             I am currently a member of <a href="http://thetatau.org/" target="_blank">Theta Tau</a>, the largest and oldest co-ed professional engineering fraternity. The <a href="https://sbthetatau.herokuapp.com/" target=_blank">UCSB chapter of Theta Tau</a> is the 100th chapter and was installed on June 1, 2019 as the Sigma Epsilon Chapter!
             <br><br>
@@ -86,8 +87,19 @@
             <img src="dinnerparty1.jpg" alt="First Dinner Party" width="250px">
         </p>
         <br>
-        <a name="whyucsb"></a>
+        <a name="whycs"></a>
+        <h2>WHY I'M STUDYING COMPUTER SCIENCE</h2>
+        <p>
+            I have had an interest in computer science since 8th grade. There was a "web development" class offered that taught the basic skills of HTML and CSS. I thought the class was really interesting and I really enjoyed how creative you can be with HTML and CSS.
+            <br><br>
+            Fast forward to sophomore year of high school, I took a class called "Principles of Computer Science," which was taught in Scratch and Python. Scratch was a very helpful way to learn the fundamentals of computer science because you could visualize blocks of code and how they affected each other. Then with Python, it was about learning the syntax and how to code the language, and then implementing code into different parts of a program.
+            <br><br>
+            The following year, I took "AP Computer Science," that was taught in Java, which was completely different from Python syntax-wise, but I could draw similarities in concepts and foundations between the two languages, which opened my mind to computer science.
+            <br><br>
+            Ultimately, I chose to study computer science at UCSB because I have always loved how free and creative computer science is. Given HTML and CSS, you can build any type of website and there are so many styling options. With Python, Java, C++, etc., you can create all kinds of programs with any of these languages. It amazed me how the underlying foundation and fundamentals of coding languages were relatively similar, so as long as you knew the correct syntax for each language, you could create anything.
+        </p>
         <br>
+        <a name="whyucsb"></a>
         <h2>WHY I CHOSE UCSB</h2>
         <p>
             I never had the opportunity to visit colleges before I made my decision on which college to attend. My parents were always busy working, we needed a dogsitter, and I was busy with either school, work, or other extracurricular activities. 
@@ -98,6 +110,7 @@
             <br><br>
             Ultimately, I am extremely glad that I chose to attend UCSB. I was able to meet some of my closest friends through classes, clubs, and extracurricular activities. I was able to find my home away from home, and especially after I moved from California to New Jersey, I really needed my close group of friends for support. UCSB also helped me grow independently, manage my time better, and learn to live on my own.
         </p>
+
         
     </div>
 
