--- a/aboutme.html
+++ b/aboutme.html
@@ -4,7 +4,8 @@
     <title>About Me</title>
     <!-- <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> -->
 	<link href="http://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css">
-	<link href="http://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
+    <link href="http://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
+    <link rel="icon" href="favicon.ico" type="image/ico" sizes="16x16">
     <link rel="stylesheet" href="aboutme.css">
 </head>
 <body>
@@ -37,8 +38,8 @@
         </div>
         <br><br>
         <p>
-            <img src="tt.jpg" width="300px" hspace="20px">
             <img src="me.jpg" width="300px">
+            <img src="tt.jpg" width="300px" hspace="20px">
             <br><br>
             Hi! My name is ChanChan Mao. I was born and raised in San Mateo, California, but I recently moved to Westfield, New Jersey in September 2019. I attend University of California, Santa Barbara and I am majoring in Computer Science.
             <br><br>
