added footer but arrow doesnt show on ucsb

--- a/aboutme.html
+++ b/aboutme.html
@@ -46,7 +46,18 @@
             I have worked at Timothy Adams Chocolates, a cute little chocolate shop located in Palo Alto, CA, for the past two years since summer of 2017. After starting college, I could not work anymore, so I like to go back every summer after every school year to help out where I can. 
             <!-- Timothy Woods and Adams Holland are the owners of the shop and we have all become very close since I started working. They are two of the nicest, funniest, and most humble people I have ever met and I consider them family. -->
         </p>
+        <br>
+        <h2>HOBBIES</h2>
+        <p>
+            In my free time, I enjoy drawing. *add images from ipad*
+        </p>
+
+        <footer>
+            <p style="color: white; font-size: 14px; font-family: Montserrat, sans-serif;">CREATED BY CHANCHAN MAO<br>(c) 2020</p>
+        </footer>
+        
     </div>
+    
 
 
 </body>
