--- a/contact.html
+++ b/contact.html
@@ -55,6 +55,10 @@
             <p>
             hi
             </p> -->
+        <br>
+        <footer>
+            <p style="color: white; font-size: 14px;font-family: Montserrat, sans-serif; text-align: center;">CREATED BY CHANCHAN MAO<br>(c) 2020</p>
+        </footer>
     </div>
 
 
