--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <li style="float: left"><a href="index.html">HOME</a></li>
     </ul> -->
 
-    <div class = "main"">
+    <div class = "main">
         <!-- <h1>hi idk what im doing yet</h1> -->
         <div class = "home">
             <p class = "line">Hi! My name is ChanChan Mao.</p>
