--- a/resume.html
+++ b/resume.html
@@ -41,6 +41,9 @@
             <iframe src="resume.pdf" width="80%" height="1150px"></iframe>
             <!-- ALWAYS TAKE OUT PHONE # -->
         </p>
+        <footer>
+            <p style="color: white; font-size: 14px; font-family: Montserrat, sans-serif;">CREATED BY CHANCHAN MAO<br>(c) 2020</p>
+        </footer>
     </div>
 
 
