--- a/ucsb.html
+++ b/ucsb.html
@@ -36,7 +36,7 @@
         <li><a href="aboutme.html">ABOUT ME</a></li>
         <li style="float: left"><a href="index.html">HOME</a></li>
     </ul> -->
-    <div class = "main">
+    <div class = "main"> 
         <a name="top"></a>
         <br><br>
         <div class = "ucsb">
@@ -112,6 +112,9 @@
             Ultimately, I am extremely glad that I chose to attend UCSB. I was able to meet some of my closest friends through classes, clubs, and extracurricular activities. I was able to find my home away from home, and especially after I moved from California to New Jersey, I really needed my close group of friends for support. UCSB also helped me grow independently, manage my time better, and learn to live on my own.
         </p>
 
+        <footer>
+            <p style="color: white; font-size: 14px; font-family: Montserrat, sans-serif;">CREATED BY CHANCHAN MAO<br>(c) 2020</p>
+        </footer>
         
     </div>
 
