--- a/ucsb.html
+++ b/ucsb.html
@@ -60,13 +60,13 @@
             <br><br>
             I became a member of the fraternity in June 2019, as part of Epsilon Class. Theta Tau has allowed me to meet so many wonderful people that I can call my brothers and that I can bond with and look up to for academic and career advice. Theta Tau has also given me the opportunity to grow as an individual and as a student, and has pushed me to work harder on myself and on my academics.
             <br><br>
-            I am head of the Brotherhood and Professional Development Committee. I work with a committee of 8 other members to create engaging as well as professional bi-weekly events for members of the fraternity. Along with the committee, we coordinated with a body of over 50 members to create events and strong networks connected by brotherhood and professional development.
+            I am currently the Corresponding Secretary on the Executive Board for 2020-2021 and previously I was the head of the Brotherhood and Professional Development Committee during 2019-2020. I work alongside 4 other executive board members to plan professional events as well as brotherhood events for the fraternity and keep the members of the fraternity engaged.
             <br><br>
             <img src="tt.png" alt="Theta Tau" height="350px">
             <br>
             <a href="https://www.instagram.com/ucsbthetatau/" target="_blank"><img src="ig.png" width="40px"></a>
             <br><br>
-            I am a staff member of the Korean American Student Association on the Events Committee. Along with two committee members and 20 other student staff members, we plan social events, club family events, bonding events, etc. We also collaborate with other Asian organizations on campus, such as the Vietnamese Student Association (VSA) and the Taiwanese American Student Association (TASA), to plan events that bring more interest and awareness to Asian ethnicities. I have been a member of KASA since September 2018 and a staff member since January 2019.
+            I am currently the co-President of KASA for 2020-2021. I was on the Events Committee during 2019-2020 and part of freshmen staff during 2018-2019. I work alongside my co-President and 20 other staff members to plan family events, bonding events, etc. We also collaborate with other Asian organizations on campus, such as the Vietnamese Student Association (VSA) and the Taiwanese American Student Association (TASA), to plan events that bring more interest and awareness to Asian ethnicities. I have been a member of KASA since September 2018 and a staff member since January 2019.
             <br><br>
             (Fun Fact: I designed this logo.)
             <br>
